tests/fail/elaboration/non-exhaustive-patterns/match-duplicate.fathom
//~ exit-code = 1

match true {
  true => 1,
  true => 2
} : U32
